force-app/main/default/objects/DRC_NBC_Restricted_Product__c/DRC_NBC_Restricted_Product__c.object-meta.xml
<CustomObject>
    <label>Account Products</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Restricted Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>