force-app/main/default/objects/DRC_NBC_Restricted_Product__c/fields/DRC_NBC_Customer__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Restricted_Products_Access</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>