force-app/main/default/objects/DRC_NBC_Restricted_Product__c/fields/DRC_NBC_Customer_s_Product_code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Customer_s_Product_code__c</fullName>
    <label>Customer’s Product code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>