force-app/main/default/objects/DRC_NBC_Restricted_Product__c/fields/DRC_NBC_Is_Product_Sync_To_BC__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Is_Product_Sync_To_BC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Sync To BC</label>
    <type>Checkbox</type>
</CustomField>