force-app/main/default/objects/DRC_NBC_Restricted_Product__c/fields/DRC_NBC_User__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Restricted_Products_Access</relationshipName>
    <type>Lookup</type>
</CustomField>