force-app/main/default/objects/DRC_NBC_Restricted_Product__c/validationRules/DRC_NBC_Require_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Require_Product</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(DRC_NBC_Product__c)</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Product__c</errorDisplayField>
    <errorMessage>Please choose a Product that is flagged as a restricted Product.</errorMessage>
</ValidationRule>