force-app/main/default/objects/DRC_NBC_Restricted_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DRC_NBC_Product__c</columns>
    <columns>DRC_NBC_Customer__c</columns>
    <columns>DRC_NBC_Customer_s_Product_code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>